src/test/deca/syntax/valid/class/13_listDeclClass.deca
/* Description:
    declaration d'une suite de classe
     (correct syntaxiquement)

    Historique:
      cree le 20/01/2020
*/

  class A
  {

  }
  class B extends A
  {

  }
  class C extends B
  {

  }
  class D extends C
  {

  }
