src/test/deca/syntax/invalid/class/declParamInvalid3.deca
/* Description:
    teste la regle (3.12) de la vérification contextuelles
    Déclaration de paramètres qui n'est pas prédefinie

    Historique:
      cree le 21/01/2020
*/

class A {
  int methode(null a){} // Erreur au nivau de a "null" n'est pas predefinie
}

class C {

}
class B {

}
